# mygos-cpp-tools

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  installsubmodules.sh
buildscripts/linux/: m_create.sh  m_fullbuild.sh  m_make.sh
buildscripts/mac/: m_create.sh  m_mrun.sh  m_run.sh
buildscripts/windows/: m_create.sh  m_run.sh
src/: CMakeLists.txt  Project.cmake  main.cc  main.cpp  main.h
src/api/binance/: bnbapihelper.cc  bnbapihelper.h  bnbconstants.h  bnbmanager.cc  bnbmanager.h  bnbstructs.h
src/controller/: trader.cc  trader.h
src/inputhandlers/: handlefiles.h  handlesockets.h
src/lib/: common.h  debugger.h  helpers.h
src/lib/eventmanager/: eventmanager.cpp  eventmanager.h
src/lib/types/: destructive_copy_constructible.h  dynamicobject.cc  dynamicobject.cpp  dynamicobject.h
src/lib/utils/: filehelper.cpp  filehelper.h  filemanager.cpp  filemanager.h  filestructs.h  threadpool.cc  threadpool.cpp  threadpool.h  time.h  timemanager.cc  timemanager.cpp  timemanager.h
src/lib/utils/filemanagement/: filehelper.cc  filehelper.cpp  filehelper.h  fileimports.h  filemanager.cc  filemanager.cpp  filemanager.h  filestructs.h  memorymapped.cc  memorymapped.cpp  memorymapped.h  memorymappedjson.h
